<resources>
    <string name="app_name">JanJalan</string>
    <string name="destinasi_wisata_alam_pertama_adalah_pantai_bala_sektai_tempat_wisata_ini_berada_di_desa_pasir_tinggi_kecamatan_teupah_selatan_kab_simeulue_aceh_destinasi_wisata_ini_sangat_cocok_dikunjungi_buat_kamu_yang_suka_dengan_suasana_pantai_tropis_n_npantai_bala_sektai_memiliki_pesona_alam_yang_indah_dan_alami_ditambah_air_yang_berwana_biru_dan_jernih_sehingga_membuat_mata_menjadi_segar_dan_full_senyum_objek_wisata_ini_juga_dekat_dengan_beberapa_destinasi_wisata_lainnya_sehingga_kamu_tidak_perlu_repot_repot_pergi_jauh_untuk_mencari_tempat_liburan_lagi">Destinasi wisata alam pertama adalah Pantai Bala Sektai. Tempat wisata ini berada di Desa Pasir Tinggi, Kecamatan Teupah Selatan, Kab. Simeulue, Aceh. Destinasi wisata ini sangat cocok dikunjungi buat kamu yang suka dengan suasana pantai tropis. \n\nPantai Bala Sektai memiliki pesona alam yang indah dan alami. Ditambah air yang berwana biru dan jernih sehingga membuat mata menjadi segar dan full senyum. Objek wisata ini juga dekat dengan beberapa destinasi wisata lainnya sehingga kamu tidak perlu repot-repot pergi jauh untuk mencari tempat liburan lagi.</string>
    <string name="tentang_aplikasi">TENTANG APLIKASI</string>
    <string name="responsi_matakuliah_bahasa_pemrograman_ii">Responsi Matakuliah Bahasa Pemrograman II</string>
    <string name="aplikasi_janjalan">Aplikasi JanJalan</string>
    <string name="developed_by_fairuz_fatin_20_12_1603">Developed by Fairuz Fatin_20.12.1603</string>
    <string name="kembali">Kembali</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="projek_ini_saya_buat_untuk_memenuhi_tugas_responsi_matakuliah_bahasa_pemrograman_ii_nberikut_adalah_ketentuan_ketentuan_yang_sudah_terpenuhi_n1_menggunakan_minimal_4_jenis_view_n2_menggunakan_salah_satu_jenis_layout_n3_menggunakan_intens_n4_menggunakan_kontrol_input_n5_menggunakan_recycler_view_disini_saya_menggunakan_scroll_view">Projek ini saya buat untuk memenuhi tugas Responsi Matakuliah Bahasa Pemrograman II. \nBerikut adalah ketentuan-ketentuan yang sudah terpenuhi : \n1. Menggunakan minimal 4 jenis view \n2. Menggunakan salah satu jenis layout \n3. Menggunakan Intens \n4. Menggunakan Kontrol Input \n5. Menggunakan Recycler view (disini saya menggunakan Scroll View)</string>
    <string name="assalamu_alaikum_perkenalkan_saya_fairuz_fatin_dari_kelas_s1_si03_angkatan_tahun_2020_n_ndengan_perasaan_bangga_saya_memperkenalkan_aplikasi_pertama_buatan_saya_sendiri_yakni_janjalan_naplikasi_ini_merupakan_sebuah_wadah_untuk_memperkenalkan_destinasi_pariwisata_daerah_kepada_banyak_orang_nnamun_di_sisi_lain_saya_juga_menyadari_bahwa_aplikasi_ini_masih_sangat_jauh_dari_sempurna_tapi_bagi_saya_ini_merupakan_sebuah_langkah_awal_yang_cukup_baik_untuk_terus_belajar_dan_mengmbangkan_kemampuan">Assalamu\'alaikum, perkenalkan saya Fairuz Fatin dari kelas S1-SI03 angkatan tahun 2020. \n\nDengan perasaan bangga saya memperkenalkan aplikasi pertama buatan saya sendiri, yakni JanJalan. \nAplikasi ini merupakan sebuah wadah untuk memperkenalkan destinasi pariwisata daerah kepada banyak orang. \nNamun di sisi lain saya juga menyadari bahwa aplikasi ini masih sangat jauh dari sempurna, tapi bagi saya ini merupakan sebuah langkah awal yang cukup baik untuk terus belajar dan mengmbangkan kemampuan.</string>
</resources>