<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="117dp"
        android:layout_height="187dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="385dp"
        app:srcCompat="@drawable/login"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/user"
        android:layout_width="249dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="309dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="249dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="243dp"
        android:freezesText="false"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="174dp"
        android:backgroundTint="#ffbd59"
        android:text="@string/login" />

</RelativeLayout>